--- a/boletines/restaurants/antojitosdelparque.html
+++ b/boletines/restaurants/antojitosdelparque.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Mis lugares favoritos para comer</title>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../assets/css/main.css">
@@ -30,9 +31,8 @@
                         <address class="address">
                             <i class="fas fa-map-pin"></i>Parque Municipal Santa Catarina Pinula, Guatemala
                         </address>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione quidem suscipit soluta. Iste, velit beatae ut, possimus culpa saepe iusto enim eaque praesentium nobis consectetur facilis impedit, necessitatibus porro?</p>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione quidem suscipit soluta. Iste, velit beatae ut, possimus culpa saepe iusto enim eaque praesentium nobis consectetur facilis impedit, necessitatibus porro?</p>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione quidem suscipit soluta. Iste, velit beatae ut, possimus culpa saepe iusto enim eaque praesentium nobis consectetur facilis impedit, necessitatibus porro?</p>
+                        <p class="paragraph">Es un negocio el cual se basa en la venta de refacciones como licuados de exquisita fruta fresca, licuados verdes, helados de fruta natural con sabores de la temporada, milkshakes para el calor del medio día y sin hacer falta a su nombre, exquisitos antojos como crepas con rellenos dulces o salados, frappés para los amantes del café, bebidas calientes como capuchinos y café proveniente de sus patios traseros.</p>
+                        <p class="paragraph">Está ubicado en uno de los locales del parque municipal con el que cuenta la cabecera de Santa Catarina Pinula. Un lugar tranquilo y armonioso para disfrutar una de los muchos antojos listados con anterioridad.</p>
                     </div>
                 </section>
             </div>
