Página terminada (excepción al demás contenido)

--- a/boletines/index.html
+++ b/boletines/index.html
@@ -32,7 +32,7 @@
                             <td>Parque Municipal Santa Catarina Pinula, Guatemala</td>
                             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></td>
                             <td>
-                                <a href="./restaurants/antojitosdelparque.html">Ver más</a>
+                                <a href="./restaurants/antojitosdelparque.html" class="ver-mas">Ver más</a>
                             </td>
                         </tr>
                         <tr>
@@ -41,7 +41,7 @@
                             <td>20 avenida 18-46, Zona 10, Guatemala</td>
                             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></td>
                             <td>
-                                <a href="./restaurants/pricesmart.html">Ver más</a>
+                                <a href="./restaurants/pricesmart.html" class="ver-mas">Ver más</a>
                             </td>
                         </tr>
                         <tr>
@@ -50,7 +50,7 @@
                             <td>Santa Catarina Pinula, Guatemala</td>
                             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
                             <td>
-                                <a href="./restaurants/delipanes.html">Ver más</a>
+                                <a href="./restaurants/delipanes.html" class="ver-mas">Ver más</a>
                             </td>
                         </tr>
                         <tr>
@@ -64,5 +64,6 @@
                 </table>
             </div>
         </div>
+        <script src="./javascript/main.js"></script>
     </body>
 </html>
