--- a/boletines/restaurants/antojitosdelparque.html
+++ b/boletines/restaurants/antojitosdelparque.html
@@ -37,5 +37,6 @@
                 </section>
             </div>
         </div>
+        <script src="../javascript/main.js"></script>
     </body>
 </html>
